// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository associateInterestsToUser should associate interests to a user: Interpolated SQL query 1`] = `
"
      INSERT INTO user_interests (user_id, interest_id)
      VALUES (1, 1), (1, 2), (1, 3)
      ON CONFLICT (user_id, interest_id) DO NOTHING
    "
`;

exports[`UserRepository create handles database error: Interpolated SQL query 1`] = `
"
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ('testuser', 'test@example.com', 'Test', 'User', '2000-01-01T00:00:00.000Z', undefined, undefined, undefined, undefined, undefined, '+541112341234')
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository create handles database error: query params 1`] = `
[
  "testuser",
  "test@example.com",
  "Test",
  "User",
  "2000-01-01T00:00:00.000Z",
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  "+541112341234",
]
`;

exports[`UserRepository create handles database error: sql query 1`] = `
"
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository create should create a new SSO user: Created user result 1`] = `
{
  "email": "new@example.com",
  "id": 1,
  "username": "newuser",
}
`;

exports[`UserRepository create should create a new SSO user: Interpolated SQL query 1`] = `
"
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ('newuser', 'new@example.com', 'New', 'User', '2000-01-01T00:00:00.000Z', undefined, 'https://example.com/picture.jpg', 'sso123oiebf8q782783', 'google.com', undefined, '+541112341234')
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository create should create a new SSO user: SQL query 1`] = `
[
  "
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    ",
  [
    "newuser",
    "new@example.com",
    "New",
    "User",
    "2000-01-01T00:00:00.000Z",
    undefined,
    "https://example.com/picture.jpg",
    "sso123oiebf8q782783",
    "google.com",
    undefined,
    "+541112341234",
  ],
]
`;

exports[`UserRepository create should create a new user: Created user result 1`] = `
{
  "email": "new@example.com",
  "id": 1,
  "username": "newuser",
}
`;

exports[`UserRepository create should create a new user: Interpolated SQL query 1`] = `
"
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ('newuser', 'new@example.com', 'New', 'User', '2000-01-01T00:00:00.000Z', 'password123', undefined, undefined, undefined, undefined, '+541112341234')
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository create should create a new user: SQL query 1`] = `
[
  "
      INSERT INTO users (username, email, name, lastname, birthdate, password, profile_picture, sso_uid, provider_id, expo_token, phone_number)
      VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    ",
  [
    "newuser",
    "new@example.com",
    "New",
    "User",
    "2000-01-01T00:00:00.000Z",
    "password123",
    undefined,
    undefined,
    undefined,
    undefined,
    "+541112341234",
  ],
]
`;

exports[`UserRepository createFollow handles database error: Interpolated SQL query 1`] = `
"
      INSERT INTO follows (userId, followedId)
      VALUES (1, 2)
      RETURNING userId, followedId, created_at AS "createdAt"
    "
`;

exports[`UserRepository createFollow handles database error: query params 1`] = `
[
  1,
  2,
]
`;

exports[`UserRepository createFollow handles database error: sql query 1`] = `
"
      INSERT INTO follows (userId, followedId)
      VALUES ($1, $2)
      RETURNING userId, followedId, created_at AS "createdAt"
    "
`;

exports[`UserRepository createFollow should create a follow successfully 1`] = `
{
  "createdAt": 2023-01-01T00:00:00.000Z,
  "followedId": 2,
  "userId": 1,
}
`;

exports[`UserRepository createFollow should create a follow successfully: Interpolated SQL query 1`] = `
"
      INSERT INTO follows (userId, followedId)
      VALUES (1, 2)
      RETURNING userId, followedId, created_at AS "createdAt"
    "
`;

exports[`UserRepository createFollow should throw EntityAlreadyExistsError when follow already exists 1`] = `"Follow already exists"`;

exports[`UserRepository createFollow should throw EntityAlreadyExistsError when follow already exists: Interpolated SQL query 1`] = `
"
      INSERT INTO follows (userId, followedId)
      VALUES (1, 2)
      RETURNING userId, followedId, created_at AS "createdAt"
    "
`;

exports[`UserRepository deleteFollow handles database error: Interpolated SQL query 1`] = `
"
      DELETE FROM follows
      WHERE userId = 1 AND followedId = 2
    "
`;

exports[`UserRepository deleteFollow handles database error: query params 1`] = `
[
  1,
  2,
]
`;

exports[`UserRepository deleteFollow handles database error: sql query 1`] = `
"
      DELETE FROM follows
      WHERE userId = $1 AND followedId = $2
    "
`;

exports[`UserRepository deleteFollow should delete a follow successfully: Interpolated SQL query 1`] = `
"
      DELETE FROM follows
      WHERE userId = 1 AND followedId = 2
    "
`;

exports[`UserRepository findByEmailOrUsername should find user by email or username: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified, password FROM users WHERE email = 'testuser' OR username = 'testuser'"`;

exports[`UserRepository findByEmailOrUsername should find user by email or username: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified, password FROM users WHERE email = $1 OR username = $1",
  [
    "testuser",
  ],
]
`;

exports[`UserRepository findByEmailOrUsername should find user by email or username: User result 1`] = `
{
  "email": "test@example.com",
  "id": 1,
  "username": "testuser",
}
`;

exports[`UserRepository findByEmailOrUsername should return null when user not found: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified, password FROM users WHERE email = 'nonexistent' OR username = 'nonexistent'"`;

exports[`UserRepository findByEmailOrUsername should return null when user not found: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified, password FROM users WHERE email = $1 OR username = $1",
  [
    "nonexistent",
  ],
]
`;

exports[`UserRepository findByEmailOrUsername should return null when user not found: User result 1`] = `null`;

exports[`UserRepository findBySSOuid should find user by SSO UID: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE sso_uid = 'sso123'"`;

exports[`UserRepository findBySSOuid should find user by SSO UID: query and params 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE sso_uid = $1",
  [
    "sso123",
  ],
]
`;

exports[`UserRepository findBySSOuid should find user by SSO UID: result 1`] = `
{
  "backgroundPicture": "background.jpg",
  "birthdate": 2000-01-01T00:00:00.000Z,
  "createdAt": 2024-01-01T00:00:00.000Z,
  "email": "test@example.com",
  "id": 1,
  "isBlocked": false,
  "isPrivate": false,
  "lastname": "User",
  "name": "Test",
  "profilePicture": "profile.jpg",
  "providerId": "provider123",
  "ssoUid": "sso123",
  "username": "testuser",
}
`;

exports[`UserRepository findBySSOuid should return null when user not found: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE sso_uid = 'nonexistent'"`;

exports[`UserRepository findBySSOuid should return null when user not found: query and params 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE sso_uid = $1",
  [
    "nonexistent",
  ],
]
`;

exports[`UserRepository findBySSOuid should return null when user not found: result 1`] = `null`;

exports[`UserRepository get should get user by id: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE id = 1"`;

exports[`UserRepository get should get user by id: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE id = $1",
  [
    1,
  ],
]
`;

exports[`UserRepository get should get user by id: User result 1`] = `
{
  "email": "test@example.com",
  "id": 1,
  "username": "testuser",
}
`;

exports[`UserRepository get should return null when user not found: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE id = 999"`;

exports[`UserRepository get should return null when user not found: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE id = $1",
  [
    999,
  ],
]
`;

exports[`UserRepository get should return null when user not found: User result 1`] = `null`;

exports[`UserRepository getAllExpoTokens should fetch all expo tokens except sender 1`] = `
[
  {
    "expoToken": "ExponentPushToken[xxx1]",
  },
  {
    "expoToken": "ExponentPushToken[xxx2]",
  },
  {
    "expoToken": "ExponentPushToken[xxx3]",
  },
]
`;

exports[`UserRepository getAllExpoTokens should fetch all expo tokens except sender: Interpolated SQL query 1`] = `
"
      SELECT expo_token AS "expoToken"
      FROM users
      WHERE id <> 1 and expo_token IS NOT NULL
      "
`;

exports[`UserRepository getAllExpoTokens should handle database error: Interpolated SQL query 1`] = `
"
      SELECT expo_token AS "expoToken"
      FROM users
      WHERE id <> 1 and expo_token IS NOT NULL
      "
`;

exports[`UserRepository getAllExpoTokens should return empty array when no tokens found 1`] = `[]`;

exports[`UserRepository getAllExpoTokens should return empty array when no tokens found: Interpolated SQL query 1`] = `
"
      SELECT expo_token AS "expoToken"
      FROM users
      WHERE id <> 1 and expo_token IS NOT NULL
      "
`;

exports[`UserRepository getAllInterests should return all interests 1`] = `
[
  "SELECT id, name, parent_id AS "parentId", emoji FROM interests",
]
`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate false: Interpolated SQL query 1`] = `"SELECT COUNT(*) FROM users WHERE created_at < '2024-01-01'::timestamptz "`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate false: query and params 1`] = `
[
  "SELECT COUNT(*) FROM users WHERE created_at < $1::timestamptz ",
  [
    "2024-01-01",
  ],
]
`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate false: result 1`] = `
{
  "count": "20",
}
`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate true: Interpolated SQL query 1`] = `"SELECT COUNT(*) FROM users WHERE created_at <= '2024-01-01'::timestamptz  + interval '0.999999 seconds'"`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate true: query and params 1`] = `
[
  "SELECT COUNT(*) FROM users WHERE created_at <= $1::timestamptz  + interval '0.999999 seconds'",
  [
    "2024-01-01",
  ],
]
`;

exports[`UserRepository getAmount should get amount with createdAt and equalDate true: result 1`] = `
{
  "count": "10",
}
`;

exports[`UserRepository getAmount should get total amount without date filter: Interpolated SQL query 1`] = `"SELECT COUNT(*) FROM users "`;

exports[`UserRepository getAmount should get total amount without date filter: query and params 1`] = `
[
  "SELECT COUNT(*) FROM users ",
  [],
]
`;

exports[`UserRepository getAmount should get total amount without date filter: result 1`] = `
{
  "count": "42",
}
`;

exports[`UserRepository getAmount should handle database error: Interpolated SQL query 1`] = `"SELECT COUNT(*) FROM users "`;

exports[`UserRepository getAmount should handle database error: query and params 1`] = `
[
  "SELECT COUNT(*) FROM users ",
  [],
]
`;

exports[`UserRepository getAmount should handle zero results: Interpolated SQL query 1`] = `"SELECT COUNT(*) FROM users WHERE created_at < '2024-01-01'::timestamptz "`;

exports[`UserRepository getAmount should handle zero results: query and params 1`] = `
[
  "SELECT COUNT(*) FROM users WHERE created_at < $1::timestamptz ",
  [
    "2024-01-01",
  ],
]
`;

exports[`UserRepository getAmount should handle zero results: result 1`] = `
{
  "count": "0",
}
`;

exports[`UserRepository getByUsername should get reduced user by username: Interpolated SQL query 1`] = `"SELECT id, username, name, profile_picture AS "profilePicture", is_private AS "isPrivate", expo_token AS "expoToken" FROM users WHERE username = 'testuser'"`;

exports[`UserRepository getByUsername should get reduced user by username: SQL query 1`] = `
[
  "SELECT id, username, name, profile_picture AS "profilePicture", is_private AS "isPrivate", expo_token AS "expoToken" FROM users WHERE username = $1",
  [
    "testuser",
  ],
]
`;

exports[`UserRepository getByUsername should get reduced user by username: User result 1`] = `
{
  "userId": 1,
  "username": "testuser",
}
`;

exports[`UserRepository getByUsername should get user by username: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE username = 'testuser'"`;

exports[`UserRepository getByUsername should get user by username: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE username = $1",
  [
    "testuser",
  ],
]
`;

exports[`UserRepository getByUsername should get user by username: User result 1`] = `
{
  "email": "test@example.com",
  "username": "testuser",
}
`;

exports[`UserRepository getByUsername should return null when user not found: Interpolated SQL query 1`] = `"SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE username = 'nonexistent'"`;

exports[`UserRepository getByUsername should return null when user not found: SQL query 1`] = `
[
  "SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified FROM users WHERE username = $1",
  [
    "nonexistent",
  ],
]
`;

exports[`UserRepository getByUsername should return null when user not found: User result 1`] = `null`;

exports[`UserRepository getFollow handles database error: Interpolated SQL query 1`] = `
"
      SELECT userId, followedId, created_at AS "createdAt"
      FROM follows
      WHERE userId = 1 AND followedId = 2
    "
`;

exports[`UserRepository getFollow handles database error: query params 1`] = `
[
  1,
  2,
]
`;

exports[`UserRepository getFollow handles database error: sql query 1`] = `
"
      SELECT userId, followedId, created_at AS "createdAt"
      FROM follows
      WHERE userId = $1 AND followedId = $2
    "
`;

exports[`UserRepository getFollow should get a follow successfully 1`] = `
{
  "createdAt": 2023-01-01T00:00:00.000Z,
  "followedId": 2,
  "userId": 1,
}
`;

exports[`UserRepository getFollow should get a follow successfully: Interpolated SQL query 1`] = `
"
      SELECT userId, followedId, created_at AS "createdAt"
      FROM follows
      WHERE userId = 1 AND followedId = 2
    "
`;

exports[`UserRepository getFollow should return undefined when follow does not exist: Interpolated SQL query 1`] = `
"
      SELECT userId, followedId, created_at AS "createdAt"
      FROM follows
      WHERE userId = 1 AND followedId = 2
    "
`;

exports[`UserRepository getFollows gets followers with all params: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND follows.created_at < '2024-01-01' AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
       LIMIT 1
    "
`;

exports[`UserRepository getFollows gets followers with all params: query params 1`] = `
[
  1,
  "%test%",
  "2024-01-01",
  1,
]
`;

exports[`UserRepository getFollows gets followers with all params: result 1`] = `
[
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 2,
    "name": "Test User 1",
    "username": "test_user1",
  },
]
`;

exports[`UserRepository getFollows gets followers with all params: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND follows.created_at < $3 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
       LIMIT $4
    "
`;

exports[`UserRepository getFollows gets followers with createdAt param: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND follows.created_at < '2024-01-01' AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows gets followers with createdAt param: query params 1`] = `
[
  1,
  "%test%",
  "2024-01-01",
]
`;

exports[`UserRepository getFollows gets followers with createdAt param: result 1`] = `
[
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 2,
    "name": "Test User 1",
    "username": "test_user1",
  },
]
`;

exports[`UserRepository getFollows gets followers with createdAt param: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND follows.created_at < $3 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows gets followers with limit param: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
       LIMIT 1
    "
`;

exports[`UserRepository getFollows gets followers with limit param: query params 1`] = `
[
  1,
  "%test%",
  1,
]
`;

exports[`UserRepository getFollows gets followers with limit param: result 1`] = `
[
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 2,
    "name": "Test User 1",
    "username": "test_user1",
  },
]
`;

exports[`UserRepository getFollows gets followers with limit param: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
       LIMIT $3
    "
`;

exports[`UserRepository getFollows gets followers without optional params: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows gets followers without optional params: query params 1`] = `
[
  1,
  "%test%",
]
`;

exports[`UserRepository getFollows gets followers without optional params: result 1`] = `
[
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 2,
    "name": "Test User 1",
    "username": "test_user1",
  },
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 3,
    "name": "Test User 2",
    "username": "test_user2",
  },
]
`;

exports[`UserRepository getFollows gets followers without optional params: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows gets following without optional params: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.followedId = users.id
      WHERE userId = 1 AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows gets following without optional params: query params 1`] = `
[
  1,
  "%test%",
]
`;

exports[`UserRepository getFollows gets following without optional params: result 1`] = `
[
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 4,
    "name": "Test User 3",
    "username": "test_user3",
  },
  {
    "followCreatedAt": 2024-01-01T00:00:00.000Z,
    "id": 5,
    "name": "Test User 4",
    "username": "test_user4",
  },
]
`;

exports[`UserRepository getFollows gets following without optional params: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.followedId = users.id
      WHERE userId = $1 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows handles database error: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND (username ILIKE '%test%' OR name ILIKE '%test%')
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows handles database error: query params 1`] = `
[
  1,
  "%test%",
]
`;

exports[`UserRepository getFollows handles database error: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows handles empty result: Interpolated SQL query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = 1 AND (username ILIKE '%nonexistent%' OR name ILIKE '%nonexistent%')
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getFollows handles empty result: query params 1`] = `
[
  1,
  "%nonexistent%",
]
`;

exports[`UserRepository getFollows handles empty result: result 1`] = `[]`;

exports[`UserRepository getFollows handles empty result: sql query 1`] = `
"
      SELECT id, username, name, follows.created_at AS "followCreatedAt"
      FROM follows
      INNER JOIN users ON follows.userId = users.id
      WHERE followedId = $1 AND (username ILIKE $2 OR name ILIKE $2)
      ORDER BY follows.created_at DESC
      
    "
`;

exports[`UserRepository getList gets users with all params: Interpolated SQL query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE '%test%' OR name ILIKE '%test%') AND created_at <= '2024-01-01'::timestamptz  + interval '0.999999 seconds'
    ORDER BY created_at DESC
     LIMIT 10 OFFSET 0"
`;

exports[`UserRepository getList gets users with all params: query params 1`] = `
[
  "%test%",
  "2024-01-01",
  10,
  0,
]
`;

exports[`UserRepository getList gets users with all params: result 1`] = `
[
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 1,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user",
  },
]
`;

exports[`UserRepository getList gets users with all params: sql query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE $1 OR name ILIKE $1) AND created_at <= $2::timestamptz  + interval '0.999999 seconds'
    ORDER BY created_at DESC
     LIMIT $3 OFFSET $4"
`;

exports[`UserRepository getList gets users with createdAt param and equalDate false: Interpolated SQL query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE '%test%' OR name ILIKE '%test%') AND created_at < '2024-01-01'::timestamptz 
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository getList gets users with createdAt param and equalDate false: query params 1`] = `
[
  "%test%",
  "2024-01-01",
]
`;

exports[`UserRepository getList gets users with createdAt param and equalDate false: result 1`] = `
[
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 1,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user",
  },
]
`;

exports[`UserRepository getList gets users with createdAt param and equalDate false: sql query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE $1 OR name ILIKE $1) AND created_at < $2::timestamptz 
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository getList gets users with createdAt param and equalDate true: Interpolated SQL query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE '%test%' OR name ILIKE '%test%') AND created_at <= '2024-01-01'::timestamptz  + interval '0.999999 seconds'
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository getList gets users with createdAt param and equalDate true: query params 1`] = `
[
  "%test%",
  "2024-01-01",
]
`;

exports[`UserRepository getList gets users with createdAt param and equalDate true: result 1`] = `
[
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 1,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user",
  },
]
`;

exports[`UserRepository getList gets users with createdAt param and equalDate true: sql query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE $1 OR name ILIKE $1) AND created_at <= $2::timestamptz  + interval '0.999999 seconds'
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository getList gets users with pagination params: Interpolated SQL query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE '%test%' OR name ILIKE '%test%')
    ORDER BY created_at DESC
     LIMIT 10 OFFSET 0"
`;

exports[`UserRepository getList gets users with pagination params: query params 1`] = `
[
  "%test%",
  10,
  0,
]
`;

exports[`UserRepository getList gets users with pagination params: result 1`] = `
[
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 1,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user",
  },
]
`;

exports[`UserRepository getList gets users with pagination params: sql query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE $1 OR name ILIKE $1)
    ORDER BY created_at DESC
     LIMIT $2 OFFSET $3"
`;

exports[`UserRepository getList gets users without optional params: Interpolated SQL query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE '%test%' OR name ILIKE '%test%')
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository getList gets users without optional params: query params 1`] = `
[
  "%test%",
]
`;

exports[`UserRepository getList gets users without optional params: result 1`] = `
[
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 1,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user",
  },
  {
    "created_at": 2024-01-01T00:00:00.000Z,
    "email": "test@example.com",
    "id": 2,
    "name": "Test User",
    "updated_at": 2024-01-01T00:00:00.000Z,
    "username": "test_user2",
  },
]
`;

exports[`UserRepository getList gets users without optional params: sql query 1`] = `
"
    SELECT id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    FROM users
    WHERE (username ILIKE $1 OR name ILIKE $1)
    ORDER BY created_at DESC
    "
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate email: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET email = 'existing@example.com'
      WHERE id = 1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate email: query params 1`] = `
[
  1,
  "existing@example.com",
]
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate email: sql query 1`] = `
"
      UPDATE users
      SET email = $2
      WHERE id = $1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate username: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET username = 'existing_username'
      WHERE id = 1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate username: query params 1`] = `
[
  1,
  "existing_username",
]
`;

exports[`UserRepository modifyUser throws EntityAlreadyExistsError for duplicate username: sql query 1`] = `
"
      UPDATE users
      SET username = $2
      WHERE id = $1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser throws original error for non-constraint violations: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET name = 'Updated Name'
      WHERE id = 1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser throws original error for non-constraint violations: query params 1`] = `
[
  1,
  "Updated Name",
]
`;

exports[`UserRepository modifyUser throws original error for non-constraint violations: sql query 1`] = `
"
      UPDATE users
      SET name = $2
      WHERE id = $1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser updates multiple fields successfully: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET name = 'Updated Name', email = 'new@example.com'
      WHERE id = 1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser updates multiple fields successfully: query params 1`] = `
[
  1,
  "Updated Name",
  "new@example.com",
]
`;

exports[`UserRepository modifyUser updates multiple fields successfully: result 1`] = `
{
  "created_at": 2024-01-01T00:00:00.000Z,
  "email": "new@example.com",
  "id": 1,
  "name": "Updated Name",
  "updated_at": 2024-01-01T00:00:00.000Z,
  "username": "test_user",
}
`;

exports[`UserRepository modifyUser updates multiple fields successfully: sql query 1`] = `
"
      UPDATE users
      SET name = $2, email = $3
      WHERE id = $1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser updates single field successfully: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET name = 'Updated Name'
      WHERE id = 1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository modifyUser updates single field successfully: query params 1`] = `
[
  1,
  "Updated Name",
]
`;

exports[`UserRepository modifyUser updates single field successfully: result 1`] = `
{
  "created_at": 2024-01-01T00:00:00.000Z,
  "email": "test@example.com",
  "id": 1,
  "name": "Updated Name",
  "updated_at": 2024-01-01T00:00:00.000Z,
  "username": "test_user",
}
`;

exports[`UserRepository modifyUser updates single field successfully: sql query 1`] = `
"
      UPDATE users
      SET name = $2
      WHERE id = $1
      RETURNING id, username, email, name, lastname, birthdate, users.created_at AS "createdAt", sso_uid as "ssoUid", provider_id as "providerId", profile_picture as "profilePicture", is_private AS "isPrivate", is_blocked AS "isBlocked", expo_token AS "expoToken", phone_number AS "phoneNumber", verified
    "
`;

exports[`UserRepository putExpoToken should handle empty expo token 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET expo_token = $2
      WHERE id = $1
    ",
      [
        1,
        "",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository putExpoToken should handle null user ID 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET expo_token = $2
      WHERE id = $1
    ",
      [
        null,
        "test-expo-token",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository putExpoToken should throw error when database query fails 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET expo_token = $2
      WHERE id = $1
    ",
      [
        1,
        "test-expo-token",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository putExpoToken should update user expo token successfully 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET expo_token = $2
      WHERE id = $1
    ",
      [
        1,
        "test-expo-token",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository updateLocation should handle database errors 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET latitude = $1, longitude = $2
      WHERE username = $3
    ",
      [
        40.7128,
        -74.006,
        "testuser",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository updateLocation should handle database errors: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET latitude = 40.7128, longitude = -74.006
      WHERE username = 'testuser'
    "
`;

exports[`UserRepository updateLocation should handle empty username 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET latitude = $1, longitude = $2
      WHERE username = $3
    ",
      [
        40.7128,
        -74.006,
        "",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository updateLocation should handle empty username: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET latitude = 40.7128, longitude = -74.006
      WHERE username = ''
    "
`;

exports[`UserRepository updateLocation should handle invalid coordinates 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET latitude = $1, longitude = $2
      WHERE username = $3
    ",
      [
        91,
        -74.006,
        "testuser",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository updateLocation should handle invalid coordinates: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET latitude = 91, longitude = -74.006
      WHERE username = 'testuser'
    "
`;

exports[`UserRepository updateLocation should update user location successfully 1`] = `
[MockFunction] {
  "calls": [
    [
      "
      UPDATE users
      SET latitude = $1, longitude = $2
      WHERE username = $3
    ",
      [
        40.7128,
        -74.006,
        "testuser",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UserRepository updateLocation should update user location successfully: Interpolated SQL query 1`] = `
"
      UPDATE users
      SET latitude = 40.7128, longitude = -74.006
      WHERE username = 'testuser'
    "
`;
